# tensorium-core

./: .gitignore  20260605-141021-tensorium-wallet-check.rvf  20260605-141504-tensorium-explorer.rvf  BACKUP_SEED_NODE_RUNBOOK.md  CANONICAL_ASSET_METADATA.md  CEX_LISTING_PACKAGE.md  CHANGELOG.md  CHECKSUMS-v0.3.0-mainnet-candidate.txt  CONTRIBUTING.md  Cargo.toml  GITHUB_MIGRATION.md  KNOWN_ISSUES.md  MAINNET_READINESS.md  NOTICE  PHASE9A_BRIDGE_LEDGER_FORMAT.md  PHASE9A_BRIDGE_MODEL_DECISION.md  PHASE9A_BRIDGE_POLICY.md  PHASE9A_EXECUTION_CHECKLIST.md  PHASE9A_INCIDENT_LOG.md  PHASE9A_LOST_KEY.md  PHASE9A_OPERATOR_RUNBOOK.md  PHASE9A_SIGNER_CUSTODY_LAYOUT.md  PHASE9A_SWAP_ROADMAP.md  PHASE9A_WTXM_CONTRACT_SPEC.md  POOL_PAYOUT_RUNBOOK.md  PUBLIC_RPC_HARDENING_RUNBOOK.md  PUBLIC_RPC_POSTURE.md  README.md  RESTORE_RUNBOOK.md  RISK_DISCLOSURE.md  install.sh  package-lock.json  tensorium-backup.sh  tensorium-monitor.sh
.claude-flow/data/: auto-memory-store.json
.claude-flow/neural/: stats.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  mining_problem.yml
.ruvector/: intelligence.json
contracts/: BRIDGE_AUDIT.md  PHASE9A_CONTRACTS_IMPLEMENTATION_PLAN.md  README.md  hardhat.config.js  package-lock.json  package.json
contracts/deployments/: drill-phase9a5-reconciliation.json  op-mainnet-v1.json  op-mainnet.json  op-sepolia.json  safe-op-mainnet.json
contracts/interfaces/: ITensoriumBridgeController.sol  IWrappedTensorium.sol
contracts/scripts/: add-safe-signers.js  check-safe.js  check-v3.js  create-v3-pool-v2.js  create-v3-pool.js  create-v4-pool.js  debug-safe.js  deploy-v1.js  deploy.js  drill-phase9a5.js  provision-liquidity.js  setup-safe-ownership.js  transfer-ownership-to-safe.js
contracts/src/: TensoriumBridgeController.sol  WrappedTensorium.sol
contracts/test/: bridge.js
crates/tensorium-core/: Cargo.toml
crates/tensorium-core/src/: block.rs  chain.rs  difficulty.rs  emission.rs  hash.rs  lib.rs  mempool.rs  pow.rs  settlement.rs  state.rs  utxo.rs  validation.rs  wallet.rs
crates/tensorium-core/src/assets/: codec.rs  mod.rs  state.rs  tests_e2e.rs
crates/tensorium-core/src/script/: mod.rs  standard.rs  vm.rs
crates/tensorium-core/src/storage/: migration.rs  mod.rs
crates/tensorium-indexer/: Cargo.toml
crates/tensorium-indexer/src/: api.rs  index.rs  main.rs  rpc.rs  store.rs  sync.rs
crates/tensorium-node/: Cargo.toml
crates/tensorium-node/src/: main.rs
crates/tensorium-node/tests/: build_asset_tx.rs
crates/tensorium-pool/: Cargo.toml
crates/tensorium-pool/src/: accounting.rs  main.rs  payout.rs  stratum.rs
crates/tensorium-tensorhash/: Cargo.toml
crates/tensorium-tensorhash/src/: lib.rs
crates/txm-rpc-adapter/: Cargo.toml  README.md
crates/txm-rpc-adapter/src/: main.rs  node.rs  scan.rs  wallet.rs
crates/txmminer/: Cargo.toml
crates/txmminer/src/: main.rs
crates/txmwallet/: Cargo.toml
crates/txmwallet/src/: main.rs
docs/: OTC_ROUND_2026-06.md  README.md  SAFETRADE_LISTING.md
docs/bridge/phase9a/: PHASE9A_BRIDGE_CONTROLLER_SPEC.md  PHASE9A_BRIDGE_MODEL_DECISION.md  PHASE9A_BRIDGE_POLICY.md  PHASE9A_EXECUTION_CHECKLIST.md  PHASE9A_INCIDENT_LOG.md  PHASE9A_OPERATOR_RUNBOOK.md  PHASE9A_SIGNER_ROTATION.md  PHASE9A_SWAP_ROADMAP.md
docs/integrations/: ATOMIC_SWAP_HTLC.md  CANONICAL_ASSET_METADATA.md  CEX_LISTING_PACKAGE.md
docs/operations/: BACKUP_SEED_NODE_RUNBOOK.md  LIQUIDITY_PROVISIONING_RUNBOOK.md  POOL_PAYOUT_RUNBOOK.md  PUBLIC_RPC_HARDENING_RUNBOOK.md  PUBLIC_RPC_POSTURE.md  RESTORE_RUNBOOK.md
docs/project/: COMMUNITY_INFRASTRUCTURE.md  GITHUB_MIGRATION.md  KNOWN_ISSUES.md  RISK_DISCLOSURE.md
docs/superpowers/plans/: 2026-06-01-chrome-wallet.md  2026-06-01-phase9a-bridge-contracts-rewrite.md  2026-06-01-phase9a6-bridge-relayer.md  2026-06-01-tensorium-sdk-js.md  2026-06-02-bridge-relayer-productionization.md  2026-06-02-post-launch-mainnet-phases.md  (+22 more)
templates/: cex-outreach-emails.md  community-launch-announcement.md  nginx-public-rpc.conf  phase9a-bridge-ledger-template.csv  phase9a-reconciliation-note-template.md
tensorium-mc-state.db/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
tools/tensorium-miner/: Makefile  README.md  blake2b.cuh  common.h  gpu_worker.cu  gpu_worker.h  host_tensorhash.cpp  host_tensorhash.h  main.cpp  main.cu  mine_genesis.cu  modes.cpp  modes.h  nvml_monitor.cpp  nvml_monitor.h  sha256d.cuh  solo_client.cpp  solo_client.h  stratum_client.cpp  stratum_client.h  tensorhash.cuh  tensorhash_kernel.cu  tensorhash_params.h  test_host_tensorhash.cpp
tools/txmminer-cuda/: Makefile  README.md  common.h  gpu_worker.cu  gpu_worker.h  main.c  main.cpp  main.cu  mine_genesis.cu  mining_kernel.cu  nvml_monitor.cpp  nvml_monitor.h  sha256d.cuh  solo_client.cpp  solo_client.h  stratum_client.cpp
web/bridge/: index.html
web/marketplace/: README.md  index.html  marketplace.js
(+33 files in other folders)
