[workspace]
members = [
    "crates/tensorium-core",
    "crates/tensorium-node",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/rygroup-dev/tensorium-core"
rust-version = "1.76"

[workspace.dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
