[workspace]
members = [
    "crates/tensorium-core",
    "crates/tensorium-node",
    "crates/txmwallet",
    "crates/txmminer",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/rygroup-dev/tensorium-core"
rust-version = "1.76"

[workspace.dependencies]
base64ct = "=1.6.0"
bech32 = "0.9"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
