[workspace]
members = [
    "crates/tensorium-core",
    "crates/tensorium-node",
    "crates/txmwallet",
    "crates/txmminer",
    "crates/tensorium-pool",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rygroup-dev/tensorium-core"
rust-version = "1.76"

[workspace.dependencies]
argon2 = "0.5"
base64ct = "=1.6.0"
bech32 = "0.9"
chacha20poly1305 = "0.10"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
