[package]
name = "tensorium-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64ct.workspace = true
bech32.workspace = true
hex.workspace = true
k256.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
rocksdb  = { version = "0.22", features = ["snappy"] }
bincode  = "1.3"
tempfile = "3"
tensorium-tensorhash = { path = "../tensorium-tensorhash" }

[dev-dependencies]
serde_json.workspace = true
