[package]
name = "tensorium-pool"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Reference mining pool for Tensorium — HTTP proxy, share accounting, 5% fee"

[dependencies]
tensorium-core = { path = "../tensorium-core" }
serde = { workspace = true }
serde_json = { workspace = true }
