[package]
name = "txm-rpc-adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tensorium-core = { path = "../tensorium-core" }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
ureq = "2"
tiny_http = "0.12"
