[package]
name = "txmwallet"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tensorium-core = { path = "../tensorium-core" }
